k8s/argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      name: https
  selector:
    app: argocd-server
